fix truncation length and pre css

--- a/app/assets/stylesheets/welcome.css
+++ b/app/assets/stylesheets/welcome.css
@@ -51,7 +51,7 @@ a:hover.button {
   background: rgba(0,0,0,1.0);
 }
 .pag {
-  padding: 10px 10px 0 10px;
+  padding: 10px;
 }
 .pagination-centered {
   padding-top: 10px;
@@ -77,6 +77,9 @@ a:hover {
 .fancybox-skin {
   background-color: #1F2325;
   color: #fff;
+}
+pre {
+  background-color: #fff;
 }
 @media only screen and (min-width: 40.063em) and (max-width: 64.063em) {
   .grid-text {
